Closed Bug 451127 Opened 17 years ago Closed 17 years ago

"ASSERTION: nsSimpleURI not thread-safe" through nsInputStreamTransport destructor

Categories

(Core :: Networking, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: jruderman, Assigned: timeless)

Details

(Keywords: assertion)

Attachments

(1 file, 2 obsolete files)

###!!! ASSERTION: nsSimpleURI not thread-safe: '_mOwningThread.GetThread() == PR_GetCurrentThread()', file /Users/jruderman/central/netwerk/base/src/nsSimpleURI.cpp, line 73 nsSimpleURI::Internal::Release() (nsUnicharUtils.cpp:) nsSimpleURI::Release() (nsUnicharUtils.cpp:) nsCOMPtr<nsIURI>::~nsCOMPtr() (nsUnicharUtils.cpp:) nsCOMPtr<nsIURI>::~nsCOMPtr() (nsUnicharUtils.cpp:) nsJSThunk::~nsJSThunk() (nsUnicharUtils.cpp:) nsJSThunk::Release() (nsUnicharUtils.cpp:) nsCOMPtr<nsIInputStream>::~nsCOMPtr() (nsUnicharUtils.cpp:) nsCOMPtr<nsIInputStream>::~nsCOMPtr() (nsUnicharUtils.cpp:) nsInputStreamTransport::~nsInputStreamTransport() (nsUnicharUtils.cpp:) nsInputStreamTransport::Release() (nsUnicharUtils.cpp:) nsCOMPtr<nsIInputStream>::assign_assuming_AddRef(nsIInputStream*) (pldhash.c:) nsCOMPtr<nsIInputStream>::assign_with_AddRef(nsISupports*) (pldhash.c:) nsCOMPtr<nsIInputStream>::operator=(nsIInputStream*) (pldhash.c:) nsAStreamCopier::Process() (pldhash.c:) nsAStreamCopier::Run() (pldhash.c:) nsThreadPool::Run() (pldhash.c:) nsThread::ProcessNextEvent(int, int*) (pldhash.c:) NS_ProcessNextEvent_P(nsIThread*, int) (pldhash.c:) nsThread::ThreadFunc(void*) (pldhash.c:) _pt_root (<command line>:47) _pthread_start (/usr/lib/libSystem.B.dylib) thread_start (/usr/lib/libSystem.B.dylib) Related to bug 436341 and/or bug 450914?
Keywords: assertion
not related to bug 450914
if we got steps to reproduce here, it'd be awesome. Need to figure out who is creating the URI in order to do anything.
I don't think I can do that. Should I mark this bug report as incomplete? If I manage to come up with steps later, I'll file a new bug and CC you :)
Yeah, let's go with INCOMPLETE then.
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → INCOMPLETE
Assignee: nobody → timeless
Status: RESOLVED → REOPENED
Ever confirmed: true
Attachment #336621 - Flags: review?(bzbarsky)
Resolution: INCOMPLETE → ---
Attachment #336621 - Flags: review?(bzbarsky) → review+
Comment on attachment 336621 [details] [diff] [review] see thunk patch for bug 400322 for an explanataion of sorts >- // Get the script string to evaluate... >- nsCAutoString script; >- nsresult rv = mURI->GetPath(script); >- if (NS_FAILED(rv)) return rv; >+ NS_ENSURE_STATE(!mScript.IsEmpty()); Why are you adding that NS_ENSURE_STATE? We didn't use to do any such thing, and I don't think we should be adding it. >+ NS_ENSURE_STATE(!mURL.IsEmpty()); Same here. r=bzbarsky with those two lines removed.
timeless: you have review comments in comment 6: please attach a patch addressing them, and ask for sr on it.
Whiteboard: [timeless: need new patch][timeless: request sr]
Attached patch per bz (obsolete) — Splinter Review
Attachment #336621 - Attachment is obsolete: true
Attachment #355319 - Flags: review+
Status: REOPENED → ASSIGNED
OS: Mac OS X → All
Hardware: x86 → All
Whiteboard: [timeless: need new patch][timeless: request sr] → [timeless: pending-sr]
Comment on attachment 355319 [details] [diff] [review] per bz Personally, I can't wait for the new policy making it the reviewer's call whether something needs sr, rather than the receiver in a case of patch bankruptcy having to figure it out.
Attachment #355319 - Flags: superreview?(bzbarsky)
Attached patch per bzSplinter Review
Attachment #355319 - Attachment is obsolete: true
Attachment #355325 - Flags: review+
Attachment #355319 - Flags: superreview?(bzbarsky)
Comment on attachment 355325 [details] [diff] [review] per bz Sigh.
Attachment #355325 - Flags: superreview?(bzbarsky)
Attachment #355325 - Flags: superreview?(bzbarsky) → superreview+
http://hg.mozilla.org/mozilla-central/rev/b087a09f82aa (including the nsresult rv; that somehow snuck out of the second "per bz").
Status: ASSIGNED → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
Whiteboard: [timeless: pending-sr]
Target Milestone: --- → mozilla1.9.2a1
Version: unspecified → Trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: