Bug 451127 "ASSERTION: nsSimpleURI not thread-safe" through nsInputStreamTransport destructor nsJSThunk can't use an nsIURI object internally r+sr=bz